--- a/adoptions/src/main/resources/application.properties
+++ b/adoptions/src/main/resources/application.properties
@@ -1,2 +1,9 @@
 spring.application.name=web
+
 spring.ai.vectorstore.pgvector.initialize-schema=true
+
+spring.sql.init.mode=always
+
+spring.datasource.password=secret
+spring.datasource.username=myuser
+spring.datasource.url=jdbc:postgresql://localhost/mydatabase
