adding all the files
Signed-off-by: Josh Long <54473+joshlong@users.noreply.github.com>

--- a/original-arcofai-code/og-agentic-adoptions/pom.xml
+++ b/original-arcofai-code/og-agentic-adoptions/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>adoptions</artifactId>
+	<artifactId>og-agentic-adoptions</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>adoptions</name>
+	<name>og-agentic-adoptions</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
 	<licenses>
