--- a/assistant/src/main/resources/application.properties
+++ b/assistant/src/main/resources/application.properties
@@ -1,11 +1,13 @@
 spring.application.name=assistant
 #
-spring.ai.vectorstore.pgvector.initialize-schema=true
-#
-spring.datasource.url=jdbc:postgresql://localhost/mydatabase
-spring.datasource.username=myuser
 spring.datasource.password=secret
+spring.datasource.username=myuser
+spring.datasource.url=jdbc:postgresql://localhost/mydatabase
 #
 spring.sql.init.mode=always
 #
+spring.ai.vectorstore.pgvector.initialize-schema=true
+#export SPRING_AI_OPENAI_API_KEY=...
 spring.threads.virtual.enabled=true
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
