--- a/assistant/src/main/resources/application.properties
+++ b/assistant/src/main/resources/application.properties
@@ -7,7 +7,11 @@ spring.datasource.url=jdbc:postgresql://localhost/mydatabase
 spring.sql.init.mode=always
 #
 spring.ai.vectorstore.pgvector.initialize-schema=true
+#
+spring.ai.chat.memory.repository.jdbc.initialize-schema=always
+#
 #export SPRING_AI_OPENAI_API_KEY=...
 spring.threads.virtual.enabled=true
+#
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
